# MongeAmpere

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindCImg.cmake  FindSuiteSparse.cmake
include/CGAL/: Triangulation_incremental_builder_2.h
include/MA/: Autodiff_nt.hpp  common_rt.hpp  convex_hull_constructed.h  functions.hpp  kantorovich.hpp  lloyd.hpp  misc.hpp  optimal_transport.hpp  polygon_intersection.hpp  predicates.hpp  quadrature.hpp  rasterization.hpp  simple_convex_hull_2.hpp  voronoi_convex_polygon_intersection.hpp  voronoi_polygon_intersection.hpp  voronoi_triangulation_intersection.hpp  wolfe.hpp
tests/: CMakeLists.txt  bench_opttransport.cpp  test_halfplane.cpp  test_lloyd.cpp  test_opttransport.cpp  test_opttransport_eval.cpp  test_power.cpp  test_quadrature_triangle.cpp  test_quantization.cpp  test_triangulation.cpp  test_voronoi.cpp  test_voronoi_ad.cpp  test_voronoi_convex_polygon.cpp  test_voronoi_tri.cpp  test_zeldovich.cpp
